# sql2kg

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: edge_class.rs  errors.rs  lib.rs  node.rs  primary_key.rs  traits.rs
src/traits/: kg_like_db.rs
