[package]
name = "sql2kg"
version = "0.1.0"
edition = "2024"

[dependencies]
sql-traits = { git = "https://github.com/earth-metabolome-initiative/sql-traits", branch = "main" }
diesel = { git = "https://github.com/LucaCappelletti94/diesel", branch = "future3", features = [
	"postgres",
	"uuid",
] }
diesel-dynamic-schema = { git = "https://github.com/LucaCappelletti94/diesel", branch = "future3" }
uuid = { version = "1.4", features = ["v4"] }
thiserror = "2.0"
csv = "1.1"
flate2 = "1.0"
time_requirements = "0.1.0"

[lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
